# gamedev

./: Cargo.toml  build.rs
resources/shaders/: flat.frag  font.fsh  light.fsh  light.vsh  sigmods.frag  simple.frag  simple.vert  teapot.vert  triangle.vert  water.fsh  water.vsh
src/: main.rs  triangle.frag
src/audio/: mod.rs
src/font/: mod.rs
src/render/: mod.rs
src/shaders/: flat.frag  flat.vert  mod.rs  sigmods.vert  triangle.frag  triangle.vert
src/shapes/: mod.rs
src/textures/: mod.rs
src/window/: mod.rs
